[package]
name = "scan_overScopeUnsafe"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.7"
walkdir = "2.3"
anyhow = "1"
syn = { version = "=2.0.77", features = ["full", "visit","extra-traits"] }
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
quote = "1.0"
prettyplease = "0.2.20"
rayon = "1.5"
lazy_static = "1.4"